--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,14 @@ license = "MIT OR Apache-2.0"
 description = "Persistent Merkle Tree in Rust"
 
 [dev-dependencies]
-hex-literal = "=0.3.4"
+hex-literal = "0.3.4"
 tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
 sled = "=0.34.7"
-ark-serialize = "=0.3.0"
+ark-serialize = { version = "0.5.0", default-features = false }
 
 [dependencies]
-rayon = { version = "=1.7.0", optional =  false }
+rayon = { version = "1.10.0", optional = true }
+
+[features]
+default = ["parallel"]
+parallel = ["rayon", "ark-serialize/parallel"]
