feat: parallel feature flag

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ ark-serialize = { version = "0.5.0", default-features = false }
 rayon = { version = "1.10.0", optional = true }
 
 [features]
-default = ["parallel"]
+default = []
 parallel = ["rayon", "ark-serialize/parallel"]
